{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 33,
  "lineage": "deafa2cd-0457-5245-9df4-705dc3f3f17f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404498955184:internet-gateway/igw-090e010e423ebf2b8",
            "id": "igw-090e010e423ebf2b8",
            "owner_id": "404498955184",
            "tags": {
              "Name": "opstree-igw"
            },
            "tags_all": {
              "Name": "opstree-igw"
            },
            "vpc_id": "vpc-003657e77933f27dc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404498955184:route-table/rtb-0914e36d746656358",
            "id": "rtb-0914e36d746656358",
            "owner_id": "404498955184",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "opstree-rt"
            },
            "tags_all": {
              "Name": "opstree-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-003657e77933f27dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404498955184:route-table/rtb-0aa407bd1914d2df2",
            "id": "rtb-0aa407bd1914d2df2",
            "owner_id": "404498955184",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "opstree-rt"
            },
            "tags_all": {
              "Name": "opstree-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-003657e77933f27dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a39f6f6080ba23",
            "route_table_id": "rtb-0914e36d746656358",
            "subnet_id": "subnet-07162f0b48ab37cca"
          },
          "dependencies": [
            "aws_route_table.app_route_table",
            "aws_subnet.prisubnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0578f14b14d2e5c7c",
            "route_table_id": "rtb-0914e36d746656358",
            "subnet_id": "subnet-01b496e9576ff9fbb"
          },
          "dependencies": [
            "aws_route_table.app_route_table",
            "aws_subnet.prisubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091e4540acb6066b0",
            "route_table_id": "rtb-0aa407bd1914d2df2",
            "subnet_id": "subnet-08ba2cf81188e63ec"
          },
          "dependencies": [
            "aws_route_table.pub_route_table",
            "aws_subnet.pubsubnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035fb1d76f95e4c95",
            "route_table_id": "rtb-0aa407bd1914d2df2",
            "subnet_id": "subnet-0c695fdc3038474dd"
          },
          "dependencies": [
            "aws_route_table.pub_route_table",
            "aws_subnet.pubsubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404498955184:subnet/subnet-07162f0b48ab37cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07162f0b48ab37cca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404498955184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-1"
            },
            "tags_all": {
              "Name": "pub-subnet-1"
            },
            "vpc_id": "vpc-003657e77933f27dc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404498955184:subnet/subnet-01b496e9576ff9fbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b496e9576ff9fbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404498955184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-2"
            },
            "tags_all": {
              "Name": "pub-subnet-2"
            },
            "vpc_id": "vpc-003657e77933f27dc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404498955184:subnet/subnet-08ba2cf81188e63ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ba2cf81188e63ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404498955184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-1"
            },
            "tags_all": {
              "Name": "pub-subnet-1"
            },
            "vpc_id": "vpc-003657e77933f27dc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404498955184:subnet/subnet-0c695fdc3038474dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c695fdc3038474dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404498955184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-2"
            },
            "tags_all": {
              "Name": "pub-subnet-2"
            },
            "vpc_id": "vpc-003657e77933f27dc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:404498955184:vpc/vpc-003657e77933f27dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f008dac4bdf14fa0",
            "default_route_table_id": "rtb-041de998ffe27ae31",
            "default_security_group_id": "sg-0233909d0c0603c74",
            "dhcp_options_id": "dopt-05c593429fad92b46",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003657e77933f27dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041de998ffe27ae31",
            "owner_id": "404498955184",
            "tags": {
              "Name": "opstree"
            },
            "tags_all": {
              "Name": "opstree"
            }
          }
        }
      ]
    }
  ]
}